** https://docs.netapp.com/us-en/bluexp-setup-admin/task-support-registration.html["了解如何注册获取支持"]


* 现在、您可以在BlueXP中搜索文档。搜索结果现在可提供docs.netapp.com和kb.netapp.com上内容的链接、这可能有助于问题解答解答您的问题。
+
image:https://raw.githubusercontent.com/NetAppDocs/cloud-manager-setup-admin/main/media/screenshot-search-docs.png["控制台顶部提供的BlueXP搜索的屏幕截图。"]

* 现在、以下AWS地区支持此连接器：
+
** (ap-s南部-2)
** 墨尔本(亚太东南部-4)
** 西班牙(欧盟南部-2)
** 阿联酋(ME-Central 1)
** 苏黎世(欧盟中部2)


* 现在、以下Azure地区支持Connector：
+
** 巴西南部
** 法国南部
** JIO印度中部
** JIO印度西部
** 波兰中部
** 卡塔尔中部


* 现在、以下Google Cloud地区支持Connector：
+
** 哥伦布(美国-东5)
** 达拉斯(美国-南1)


+
https://cloud.netapp.com/cloud-volumes-global-regions["查看支持的区域的完整列表"^]





=== 2023年5月7日



==== 连接器3.9.29

* 当您从BlueXP或云提供商的市场部署Connector时、Ubuntu 22.04是适用于Connector的新操作系统。
+
您还可以选择在运行Ubuntu 22.04的自己的Linux主机上手动安装Connector。

* 新的Connector部署不再支持Red Hat Enterprise Linux 8.6和8.7。
+
新部署不支持这些版本、因为Red Hat不再支持Docker、而Docker是Connector所必需的。如果现有Connector运行的是RHEL 8.6或8.7、则NetApp将继续支持您的配置。

+
Red Hat 7.6、7.7、7.8和7.9仍支持新的和现有的连接器。

* 现在、卡塔尔地区的Google Cloud支持Connector。
* Microsoft Azure中的瑞典中部地区也支持Connector。
+
https://cloud.netapp.com/cloud-volumes-global-regions["查看支持的区域的完整列表"^]

* 此版本的连接器包含Cloud Volumes ONTAP 增强功能。
+
https://docs.netapp.com/us-en/bluexp-cloud-volumes-ontap/whats-new.html#7-may-2023["了解Cloud Volumes ONTAP 增强功能"^]





=== 2023年4月4日



==== 部署模式

借助BlueXP _deployment modes_、您可以根据业务和安全要求使用BlueXP。您可以选择三种模式：

* 标准模式
* 受限模式
* 私有模式


https://docs.netapp.com/us-en/bluexp-setup-admin/concept-modes.html["详细了解这些部署模式"]。


NOTE: 受限模式的引入取代了启用或禁用SaaS平台的选项。您可以在创建帐户时启用受限模式。稍后无法启用或禁用它。



== Azure Blb存储



=== 2023年6月5日



==== 能够从BlueXP添加新存储帐户

您已有一段时间可以在BlueXP Canvs上查看Azure Blb Storage了。现在、您可以直接从BlueXP添加新存储帐户并更改现有存储帐户的属性。 https://docs.netapp.com/us-en/bluexp-blob-storage/task-add-blob-storage.html["了解如何添加新的Azure Blb存储帐户"^]。



== Azure NetApp Files



=== 2021 年 4 月 11 日



==== 支持卷模板
